# sumi

./: .gitignore  INSTRUCTIONS.md  README.md  package.json  svelte.config.js  vite.config.ts
research/: general-workflow.md  svelte-kit-5.md  tauri-v2.md  ui-styling.md
research/feature-planning/: SPRINT 1.md  SPRINT 2.md
research/feature-planning/sprint-2/: 00-OVERVIEW.md  01A-types.md  01B-storage-utility.md  01C-keyboard-utility.md  02A-book-store-extension.md  02B-settings-store.md  02C-bookmarks-store.md  02D-reading-stats-store.md  03A-toc-drawer.md  03B-settings-drawer.md  03C-bookmarks-drawer.md  03D-goto-dialog.md  03E-shortcuts-modal.md  04A-epub-reader-updates.md  04B-pdf-reader-updates.md  04C-reader-shell-updates.md  05A-library-updates.md
research/feature-planning/sprint-3/: 00-OVERVIEW.md  01A-annotations-store.md  01B-search-engine.md  02A-selection-menu.md  03A-annotations-drawer.md  03B-advanced-themes.md  03C-two-page-view.md  04A-collections-system.md
research/feature-planning/sprint-4/: 00-OVERVIEW.md  01A-gestures-haptics.md  01B-bottom-sheets.md
research/feature-planning/sprint-5/: 00-OVERVIEW.md  01A-comic-reader.md  01B-legacy-scroll.md
research/feature-planning/sprint-6/: 00-OVERVIEW.md  01A-tts-system.md  01B-pdf-reflow.md
research/feature-planning/sprint-7/: 00-OVERVIEW.md  01A-ai-integration.md  01B-automation.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: config.ts
src/routes/: +layout.svelte  +page.svelte
(+24 files in other folders)
