[package]
name = "sumi"
version = "0.1.0"
description = "A cross-platform ebook reader"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
epub = "2.1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
lopdf = "0.32"
image = "0.25"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
